Fixed some unnecessary markup and tweaked spacing around show field on events.

--- a/client/scss/base/_forms.scss
+++ b/client/scss/base/_forms.scss
@@ -40,6 +40,10 @@ label {
   margin-bottom: $spacing-unit * 2;
 }
 
+.nested-subfield {
+  margin-top: $spacing-unit * 2;
+}
+
 .alert {
   color: $red;
   font-size: 0.8em;
